fixed display issues with carousel images not showing correctly upon page load

--- a/app/assets/stylesheets/organisms/gallery/_body.scss
+++ b/app/assets/stylesheets/organisms/gallery/_body.scss
@@ -1,6 +1,4 @@
 @include e(body) {
-  height: $gallery-body__height;
-
   margin-bottom: .625rem;
 }
 
