--- a/app/assets/stylesheets/organisms/gallery/_photo.scss
+++ b/app/assets/stylesheets/organisms/gallery/_photo.scss
@@ -1,8 +1,5 @@
 @include e(photo) {
-  // display: block;
-
   height: 400px;
-  width: auto;
-
-  // margin-right: .375rem;
+  width: 50%;
+  margin-right: .625rem;
 }
